[gd_scene load_steps=14 format=2]

[ext_resource path="res://Objects/Misc/TeamSelect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Game_modes/FFA/FFATeamSelect.gd" type="Script" id=2]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/UI/icons8-circled-play-96.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 6

[sub_resource type="DynamicFont" id=2]
size = 28
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 6

[sub_resource type="DynamicFont" id=4]
size = 28
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.196078, 0.196078, 0.196078, 0.666667 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=6]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=7]
size = 18
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.694118, 0.72549, 0.145098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 6

[sub_resource type="DynamicFont" id=9]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[node name="TeamSelect" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="container" parent="." index="0"]
margin_top = -140.0
margin_bottom = 140.0

[node name="Join" type="Button" parent="container" index="0"]
margin_right = 300.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 60 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Join"

[node name="spec" parent="container" index="1"]
margin_top = 110.0
margin_bottom = 170.0

[node name="quit" parent="container" index="2"]
margin_top = 220.0
margin_bottom = 280.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )

[node name="exit_panel" parent="." index="3"]
custom_styles/panel = SubResource( 5 )

[node name="Panel" parent="exit_panel" index="0"]
custom_styles/panel = SubResource( 6 )

[node name="Label" parent="exit_panel" index="1"]
custom_fonts/font = SubResource( 7 )

[node name="Button" parent="exit_panel" index="2"]
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )

[node name="join_panel" type="Panel" parent="." index="5"]
margin_left = -203.534
margin_top = 617.026
margin_right = 303.466
margin_bottom = 956.026
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="join_panel" index="0"]
margin_left = 159.756
margin_top = 30.659
margin_right = 309.756
margin_bottom = 160.659
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="join_panel/Panel" index="0"]
margin_right = 150.0
margin_bottom = 130.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="join_panel" index="1"]
margin_left = 48.0
margin_top = 183.0
margin_right = 449.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 7 )
text = "Join this server."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join_btn" type="Button" parent="join_panel" index="2"]
margin_left = 348.0
margin_top = 287.0
margin_right = 455.0
margin_bottom = 325.0
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="container/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="join_panel/join_btn" to="." method="_on_join_btn_pressed"]
